# HOI_Designer

./: README.md
Doc/: 钢铁雄心4Mod编辑器总设计案.docx  钢铁雄心4Mod编辑器设计方案.docx
Doc/数据库/: 前端数据库.xlsx
Src/: CMakeLists.txt  main.cpp
Src/Config/: config.h
Src/Global/: globaldata.cpp  globaldata.h
Src/HOIESV/: HOIESV.csproj  HOIESV.sln  Program.cs  Service1.Designer.cs  Service1.cs
Src/HOIESV/Properties/: AssemblyInfo.cs
Src/Model/ModelImpl/: m_modelimpl.cpp  m_modelimpl.h
Src/Qml/: qml.qrc
Src/Service/: t_control.cpp  t_control.h  t_data.cpp  t_data.h  t_network.cpp  t_network.h  t_safety.cpp  t_safety.h
Src/Service/ServiceImpl/: t_serviceimpl.cpp  t_serviceimpl.h
Src/Utils/: utils.h
